--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -52,7 +52,28 @@
       "invalid_date": "检测到无效的日期/时间选择。",
       "future_date": "时间悖论：无法选择未来的时间节点。",
       "birth_date": "时间线错误：日期早于用户初始化（出生日期）。",
-      "success_save": "日志条目已成功提交至核心存储。"
+      "success_save": "日志条目已成功提交至核心存储。",
+      "delete_success": "日志条目删除成功。",
+      "update_success": "日志条目更新成功。"
+    },
+    "delete_dialog": {
+      "title": "删除日志条目",
+      "message": "此操作将永久擦除选定的记忆区块。此数据无法恢复。您确定要继续吗？",
+      "confirm": "删除",
+      "cancel": "取消"
+    },
+    "filter": {
+      "button": "筛选",
+      "search_placeholder": "搜索日志（关键词、类别、类型）...",
+      "label_category": "类别",
+      "label_type": "类型",
+      "label_energy": "能量水平",
+      "label_environment": "环境",
+      "all_categories": "所有类别",
+      "all_types": "所有类型",
+      "placeholder_value": "数值 (0-100)",
+      "option_weather": "天气",
+      "option_mood": "心情"
     },
     "title": "系统日志",
     "live_feed": "实时数据",
