feat(ui): optimize log form layout, update dream types, and internationalize system feedback

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -82,7 +82,114 @@
     "initializing": "Initializing...",
     "no_logs": "No logs found.",
     "load_more": "LOAD MORE",
-    "end_of_archive": "END OF ARCHIVE"
+    "end_of_archive": "END OF ARCHIVE",
+    "system_feedback": "SYSTEM FEEDBACK",
+    "feedback": {
+      "energy_critical": "WARNING: Energy levels critical. Immediate rest recommended.",
+      "integrity_verified": "SYSTEM: Data integrity verified. Log archived.",
+      "skill_detected": "SYSTEM: New skill acquisition detected. Neural pathways updated.",
+      "milestone_recorded": "ACHIEVEMENT: Core memory permanently stored.",
+      "task_verified": "TASK: Completion status verified. EXP awarded.",
+      "combat_analyzed": "COMBAT: Threat neutralized. Tactical data saved.",
+      "weather_protocol": "ENVIRONMENT: Weather adaptation protocols active.",
+      "rem_archived": "SLEEP CYCLE: REM data archived. Subconscious processing complete.",
+      "stress_monitoring": "ALERT: Stress levels monitoring. Calming measures advised.",
+      "dream_subconscious": "SYSTEM: Subconscious data stream synchronized.",
+      "dream_rem_artifacts": "SYSTEM: REM cycle artifacts preserved.",
+      "dream_abstract": "SYSTEM: Abstract logic patterns analyzed.",
+      "dream_neural": "SYSTEM: Neural pathway mapping complete.",
+      "dream_sequence": "SYSTEM: Dream sequence archived for analysis.",
+      "health_metrics": "SYSTEM: Biological metrics updated.",
+      "health_physical": "SYSTEM: Physical status logged.",
+      "health_integrity": "SYSTEM: Health integrity scan complete.",
+      "health_vitals": "SYSTEM: Vital signs correlation recorded.",
+      "health_somatic": "SYSTEM: Somatic data archived.",
+      "work_productivity": "SYSTEM: Productivity metrics calculated.",
+      "work_cycle": "SYSTEM: Task execution cycle logged.",
+      "work_efficiency": "SYSTEM: Output efficiency analyzed.",
+      "work_objective": "SYSTEM: Professional objective tracked.",
+      "work_workload": "SYSTEM: Workload data committed.",
+      "error_anomaly": "SYSTEM: Anomaly detected. Diagnostic required.",
+      "error_persisted": "SYSTEM: Error log persisted. Stack trace saved.",
+      "error_integrity": "SYSTEM: System integrity warning.",
+      "error_protocol": "SYSTEM: Exception handling protocol engaged.",
+      "error_glitch": "SYSTEM: Glitch in the matrix recorded.",
+      "success_operation": "SYSTEM: Operation completed successfully.",
+      "success_outcome": "SYSTEM: Outcome: POSITIVE.",
+      "success_locked": "SYSTEM: Success state locked.",
+      "success_optimal": "SYSTEM: Optimal performance achieved.",
+      "success_objective": "SYSTEM: Objective verified complete.",
+      "warning_caution": "SYSTEM: Cautionary flag raised.",
+      "warning_instability": "SYSTEM: Potential instability noted.",
+      "warning_threshold": "SYSTEM: Warning threshold approached.",
+      "warning_alert": "SYSTEM: Alert state: YELLOW.",
+      "warning_preventive": "SYSTEM: Preventive monitoring active.",
+      "weather_solar": "SYSTEM: Solar input efficiency: 100%.",
+      "weather_visibility": "SYSTEM: Visibility conditions: OPTIMAL.",
+      "weather_temp_nominal": "SYSTEM: External temperature nominal.",
+      "weather_photovoltaic": "SYSTEM: Photovoltaic potential high.",
+      "weather_clear_sky": "SYSTEM: Clear sky protocols engaged.",
+      "weather_precipitation": "SYSTEM: External precipitation detected.",
+      "weather_humidity": "SYSTEM: Atmospheric humidity rising.",
+      "weather_rain_pattern": "SYSTEM: Acoustic rain pattern recognized.",
+      "weather_wet": "SYSTEM: Environment: WET.",
+      "weather_hydro_pressure": "SYSTEM: Hydro-static pressure alert.",
+      "weather_low_temp": "SYSTEM: Low temperature warning.",
+      "weather_cryogenic": "SYSTEM: Cryogenic conditions external.",
+      "weather_thermal": "SYSTEM: Thermal regulation active.",
+      "weather_friction": "SYSTEM: Friction coefficient reduced.",
+      "weather_frozen": "SYSTEM: Environment: FROZEN.",
+      "weather_low_light": "SYSTEM: Low light conditions.",
+      "weather_uv_low": "SYSTEM: UV index low.",
+      "weather_night_vision": "SYSTEM: Night vision recommended.",
+      "weather_density": "SYSTEM: Atmospheric density high.",
+      "weather_shadow": "SYSTEM: Shadow operational mode.",
+      "mood_morale_peak": "SYSTEM: User morale operating at peak efficiency.",
+      "mood_positive": "SYSTEM: Positive emotional state locked.",
+      "mood_dopamine": "SYSTEM: Dopamine receptors active.",
+      "mood_optimal": "SYSTEM: Optimal psychological condition verified.",
+      "mood_excellent": "SYSTEM: Mood metric: EXCELLENT.",
+      "mood_serotonin": "SYSTEM: Serotonin deficiency noted.",
+      "mood_support": "SYSTEM: Emotional support protocol standby.",
+      "mood_resilience": "SYSTEM: Resilience check required.",
+      "mood_empathy": "SYSTEM: Empathy module initializing...",
+      "mood_dampening": "SYSTEM: Psychological dampening detected.",
+      "mood_cortisol": "SYSTEM: Cortisol levels elevated.",
+      "mood_aggression": "SYSTEM: Aggression dampening recommended.",
+      "mood_stress_threshold": "SYSTEM: Stress threshold exceeded.",
+      "mood_cooling": "SYSTEM: Cooling logic applied.",
+      "mood_volatility": "SYSTEM: Emotional volatility high.",
+      "mood_cognitive": "SYSTEM: Cognitive processing intensified.",
+      "mood_neural": "SYSTEM: Neural network training in progress.",
+      "mood_focus": "SYSTEM: Focus state: DEEP.",
+      "mood_analytical": "SYSTEM: Analytical subroutine running.",
+      "mood_clarity": "SYSTEM: Mental clarity optimization.",
+      "mood_idling": "SYSTEM: Background processes idling.",
+      "mood_neutral": "SYSTEM: Status: STABLE/NEUTRAL.",
+      "mood_variance": "SYSTEM: Low variance detected.",
+      "mood_maintenance": "SYSTEM: Maintenance mode ready.",
+      "mood_equilibrium": "SYSTEM: Equilibrium established.",
+      "energy_low": "SYSTEM: Low power warning. Recharge recommended.",
+      "energy_critical_reserves": "SYSTEM: Energy reserves critical. Conservation mode.",
+      "energy_fatigue": "SYSTEM: System fatigue detected.",
+      "energy_metabolic": "SYSTEM: Metabolic output reduced.",
+      "energy_hibernation": "SYSTEM: Suggesting hibernation cycle.",
+      "energy_max": "SYSTEM: Power output maximum.",
+      "energy_kinetic": "SYSTEM: Kinetic potential at 100%.",
+      "energy_high": "SYSTEM: High energy state confirmed.",
+      "energy_overclock": "SYSTEM: System overclocking active.",
+      "energy_heavy_load": "SYSTEM: Ready for heavy processing loads.",
+      "fallback_recorded": "SYSTEM: Entry recorded. No improvement detected.",
+      "fallback_survival": "SYSTEM: Survival confirmed.",
+      "fallback_emotional": "SYSTEM: Emotional fluctuation archived.",
+      "fallback_timeline": "SYSTEM: Timeline extended.",
+      "fallback_existence": "SYSTEM: Existence verified.",
+      "fallback_memory": "SYSTEM: Memory fragment secured.",
+      "fallback_committed": "SYSTEM: Log committed to core memory.",
+      "fallback_marker": "SYSTEM: Chronological marker set.",
+      "fallback_anchor": "SYSTEM: Reality anchor updated.",
+      "unknown_feedback": "SYSTEM: Feedback data stream interrupted."
+    }
   },
   "login": {
     "access_terminal": "ACCESS TERMINAL",
@@ -165,7 +272,7 @@
     "HEALTH": "HEALTH",
     "WEATHER": "WEATHER",
     "EVENT": "EVENT",
-    "DREAM": "DREAM",
+    "REM_CYCLE": "REM CYCLE",
     "NIGHTMARE": "NIGHTMARE",
     "LUCID": "LUCID",
     "VISION": "VISION",
