--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -82,7 +82,114 @@
     "initializing": "初始化中...",
     "no_logs": "未找到日志。",
     "load_more": "加载更多",
-    "end_of_archive": "归档结束"
+    "end_of_archive": "归档结束",
+    "system_feedback": "系统反馈",
+    "feedback": {
+      "energy_critical": "警告：能量水平严重不足。建议立即休息。",
+      "integrity_verified": "系统：数据完整性已验证。记录已归档。",
+      "skill_detected": "系统：检测到新技能习得。神经通路已更新。",
+      "milestone_recorded": "成就解锁：核心记忆已永久保存。",
+      "task_verified": "任务：完成状态已确认。经验值已发放。",
+      "combat_analyzed": "战斗分析：威胁已消除。战术数据已保存。",
+      "weather_protocol": "环境：天气适应协议已激活。",
+      "rem_archived": "睡眠周期：快速眼动期数据已归档。潜意识处理完成。",
+      "stress_monitoring": "警报：压力水平监控中。建议采取镇静措施。",
+      "dream_subconscious": "系统：潜意识数据流同步。",
+      "dream_rem_artifacts": "系统：快速眼动周期伪影保留。",
+      "dream_abstract": "系统：抽象逻辑模式分析。",
+      "dream_neural": "系统：神经通路映射完成。",
+      "dream_sequence": "系统：梦境序列已存档用于分析。",
+      "health_metrics": "系统：生物指标已更新。",
+      "health_physical": "系统：身体状态已记录。",
+      "health_integrity": "系统：健康完整性扫描完成。",
+      "health_vitals": "系统：生命体征相关性记录。",
+      "health_somatic": "系统：躯体数据已归档。",
+      "work_productivity": "系统：生产力指标计算。",
+      "work_cycle": "系统：任务执行周期记录。",
+      "work_efficiency": "系统：输出效率分析。",
+      "work_objective": "系统：职业目标追踪。",
+      "work_workload": "系统：工作量数据提交。",
+      "error_anomaly": "系统：检测到异常。需诊断。",
+      "error_persisted": "系统：错误日志持久化。堆栈跟踪保存。",
+      "error_integrity": "系统：系统完整性警告。",
+      "error_protocol": "系统：异常处理协议参与。",
+      "error_glitch": "系统：矩阵故障记录。",
+      "success_operation": "系统：操作成功完成。",
+      "success_outcome": "系统：结果：积极。",
+      "success_locked": "系统：成功状态锁定。",
+      "success_optimal": "系统：达到最佳性能。",
+      "success_objective": "系统：目标验证完成。",
+      "warning_caution": "系统：警告标志升起。",
+      "warning_instability": "系统：注意到潜在不稳定性。",
+      "warning_threshold": "系统：警告阈值接近。",
+      "warning_alert": "系统：警报状态：黄色。",
+      "warning_preventive": "系统：预防性监控活动。",
+      "weather_solar": "系统：太阳能输入效率：100%。",
+      "weather_visibility": "系统：能见度条件：最佳。",
+      "weather_temp_nominal": "系统：外部温度标称。",
+      "weather_photovoltaic": "系统：光伏潜力高。",
+      "weather_clear_sky": "系统：晴空协议参与。",
+      "weather_precipitation": "系统：检测到外部降水。",
+      "weather_humidity": "系统：大气湿度上升。",
+      "weather_rain_pattern": "系统：识别出声学雨模式。",
+      "weather_wet": "系统：环境：湿。",
+      "weather_hydro_pressure": "系统：静水压力警报。",
+      "weather_low_temp": "系统：低温警告。",
+      "weather_cryogenic": "系统：外部低温条件。",
+      "weather_thermal": "系统：热调节活动。",
+      "weather_friction": "系统：摩擦系数降低。",
+      "weather_frozen": "系统：环境：冻结。",
+      "weather_low_light": "系统：低光照条件。",
+      "weather_uv_low": "系统：紫外线指数低。",
+      "weather_night_vision": "系统：建议夜视。",
+      "weather_density": "系统：大气密度高。",
+      "weather_shadow": "系统：阴影操作模式。",
+      "mood_morale_peak": "系统：用户士气在峰值效率运行。",
+      "mood_positive": "系统：积极情绪状态锁定。",
+      "mood_dopamine": "系统：多巴胺受体活跃。",
+      "mood_optimal": "系统：验证最佳心理状况。",
+      "mood_excellent": "系统：情绪指标：优秀。",
+      "mood_serotonin": "系统：注意到血清素缺乏。",
+      "mood_support": "系统：情感支持协议待命。",
+      "mood_resilience": "系统：需弹性检查。",
+      "mood_empathy": "系统：同理心模块初始化...",
+      "mood_dampening": "系统：检测到心理抑制。",
+      "mood_cortisol": "系统：皮质醇水平升高。",
+      "mood_aggression": "系统：建议攻击抑制。",
+      "mood_stress_threshold": "系统：超出压力阈值。",
+      "mood_cooling": "系统：应用冷却逻辑。",
+      "mood_volatility": "系统：情绪波动高。",
+      "mood_cognitive": "系统：认知处理加强。",
+      "mood_neural": "系统：神经网络训练进行中。",
+      "mood_focus": "系统：专注状态：深。",
+      "mood_analytical": "系统：分析子程序运行。",
+      "mood_clarity": "系统：心理清晰度优化。",
+      "mood_idling": "系统：后台进程空闲。",
+      "mood_neutral": "系统：状态：稳定/中立。",
+      "mood_variance": "系统：检测到低方差。",
+      "mood_maintenance": "系统：维护模式就绪。",
+      "mood_equilibrium": "系统：建立平衡。",
+      "energy_low": "系统：低电量警告。建议充电。",
+      "energy_critical_reserves": "系统：能量储备关键。节能模式。",
+      "energy_fatigue": "系统：检测到系统疲劳。",
+      "energy_metabolic": "系统：代谢输出降低。",
+      "energy_hibernation": "系统：建议休眠周期。",
+      "energy_max": "系统：功率输出最大。",
+      "energy_kinetic": "系统：动能潜力100%。",
+      "energy_high": "系统：确认高能量状态。",
+      "energy_overclock": "系统：系统超频活动。",
+      "energy_heavy_load": "系统：准备重处理负载。",
+      "fallback_recorded": "系统：条目记录。未检测到改进。",
+      "fallback_survival": "系统：生存确认。",
+      "fallback_emotional": "系统：情绪波动归档。",
+      "fallback_timeline": "系统：时间线延长。",
+      "fallback_existence": "系统：存在验证。",
+      "fallback_memory": "系统：记忆片段安全。",
+      "fallback_committed": "系统：日志提交至核心存储。",
+      "fallback_marker": "系统：设置时间标记。",
+      "fallback_anchor": "系统：现实锚点更新。",
+      "unknown_feedback": "系统：反馈数据流中断。"
+    }
   },
   "login": {
     "access_terminal": "接入终端",
@@ -171,7 +278,7 @@
       "EVENT": "观察到公共/世界事件："
     },
     "dream": {
-      "DREAM": "潜意识模拟结束。记忆片段已保存。",
+      "REM_CYCLE": "潜意识模拟结束。记忆片段已保存。",
       "NIGHTMARE": "遭遇压力模拟。皮质醇水平升高。",
       "LUCID": "在梦境状态下建立意识控制。",
       "VISION": "接收到抽象数据可视化。",
@@ -212,7 +319,7 @@
     "HEALTH": "健康",
     "WEATHER": "天气",
     "EVENT": "事件",
-    "DREAM": "梦境",
+    "REM_CYCLE": "快速眼动",
     "NIGHTMARE": "噩梦",
     "LUCID": "清醒梦",
     "VISION": "幻象",
